--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1486,6 +1486,7 @@
 }
 
 
+
 .team-card{
     /* background-color: lightgreen; */
     width: 22%;
@@ -1498,7 +1499,7 @@
     align-items: center;
     position: relative;
 }
-.member-img::before{
+.team-card::before{
     content: '';
     position: absolute;
     top: 0;
@@ -1507,6 +1508,9 @@
     border: 1px solid rgb(174, 125, 84);
     /* background-color: rgba(0, 123, 255, 0.393); */
 }
+
+
+
 .member-img{
     /* border: 2px solid #000; */
     /* background-color: #007bff; */
@@ -1517,24 +1521,78 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    position: relative;
 }
-.team-card:hover .member-img img{
-    transform: scale(1.1);
+.member-img::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 0%;
+    width: 100%;
+    background-color: rgba(174, 124, 84, 0.503);
+
+    transition: .3s ease;
+    z-index: 1;
+
 }
+.team-card:hover .member-img::before{
+    transition: .3s ease;
+    height: 100%;
+
+}
+
+
+
 .member-img img{
     width: 100%;
     height: 100%;
     transition: .3s linear;
+
+    position: relative;
+}
+.team-card:hover .member-img img{
+    transform: scale(1.1);
 }
 
+
 .social-links{
-    background-color: grey;
+    /* background-color: grey; */
     height: 150px;
     width: 40px;
     position: absolute;
     bottom: 110px;
     right: 30px;
+    z-index: 5;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }       
+.social-links i{
+    font-size: 15px;
+    color: white;
+    margin: 10px 0;
+    opacity: 0;
+    cursor: pointer;
+    transform: translateY(15px);
+    transition: 0.3s ease, opacity 0.3s ease; 
+}
+.social-links i:hover{
+    color: rgb(174, 125, 84);
+    transition: .3s ease;
+}
+.team-card:hover .social-links i {
+    opacity: 1;
+    transform: translateY(0px); 
+}
+
+.social-links i:nth-child(1) { transition-delay: 0s; }
+.social-links i:nth-child(2) { transition-delay: 0.1s; }
+.social-links i:nth-child(3) { transition-delay: 0.2s; }
+.social-links i:nth-child(4) { transition-delay: 0.3s; }
+
+
 
 
 
@@ -1566,8 +1624,8 @@
 
 .member-detail p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    color: rgb(212, 212, 212);
+    font-size: 13px;
+    color: rgb(109, 109, 109);
 }
 
 
