--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1468,7 +1468,15 @@
 }
 
 
+
+
 /* TEAM MEMEBER CARD */
+/* TEAM MEMEBER CARD */
+/* TEAM MEMEBER CARD */
+/* TEAM MEMEBER CARD */
+/* TEAM MEMEBER CARD */
+/* TEAM MEMEBER CARD */
+
 
 
 
@@ -1630,8 +1638,10 @@
 
 
 
-
-
+/* COUNTER */
+/* COUNTER */
+/* COUNTER */
+/* COUNTER */
 /* COUNTER */
 
 
@@ -1644,7 +1654,7 @@
     height: 200px;
     width: 100%;
     margin-top: 50px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 
     display: flex;
     justify-content: center;
@@ -1710,6 +1720,133 @@
 
 
 
+/* CONTACT US */
+/* CONTACT US */
+/* CONTACT US */
+/* CONTACT US */
+/* CONTACT US */
+
+
+.contact-cont{
+    /* background-color: black; */
+    width: 100%;
+    height: 100vh;
+
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.contact-cont::after{
+    content: "";
+    object-fit: cover;
+    /* opacity: .3; */
+    background: linear-gradient(10deg, rgba(0, 0, 0, 0.5) , rgb(0, 0, 0, 0.7)), url("../img/bedroom/contact big img10.jpg");
+
+    background-size: cover;
+    background-position: right;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-attachment: fixed;
+}
+
+
+.contact-big-img{
+    width: 65%;
+    height: 100%;
+    object-fit: cover;
+    background-image: url("../img/bedroom/ContactBigImg.jpeg");
+    background-image: url("../img/bedroom/contact\ big\ img10.jpg");
+    background-size: cover;
+    background-position: right;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-attachment: fixed;
+    z-index: 1;
+}
+
+
+
+.contact-inner-cont{
+    background-color: lightcoral;
+    height: 100%;
+    width: 80%;
+    /* height: 700px; */
+    /* position: absolute;
+    right: 200px; */
+    /* top: 0;  */
+    z-index: 10;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    align-items: center;
+}
+
+
+
+.contact-box{
+    background-color: rgb(255, 255, 255);
+    /* height: 100%; */
+    width: 800px;
+    height: 700px;
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+
+.contact-heading{
+    background-color: pink;
+    /* padding: 0 50px; */
+    width: 100%;
+    /* height: 100px; */
+    text-align: start;
+    position: relative;
+    padding: 20px 0px;
+}
+
+
+.contact-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    margin-left: 60px;
+    position: relative;
+}
+.contact-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: -9%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.contact-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 35%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
+
+.contact-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    margin-bottom: 20px;
+}
 
 
 
@@ -1721,13 +1858,14 @@
 
 
 
+.contact-side-box{
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.729);
+    width: 500px;
+    height: 330px;
 
 
-
-
-
-
-
+}
 
 
 
