--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1221,7 +1221,7 @@
     width: 100%;
     /* height: 100vh; */
     margin-top: 50px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1725,6 +1725,11 @@
 /* CONTACT US */
 /* CONTACT US */
 /* CONTACT US */
+.design-img4{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 
 
 .contact-cont{
@@ -1732,25 +1737,12 @@
     width: 100%;
     height: 100vh;
 
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-}
-.contact-cont::after{
-    content: "";
-    object-fit: cover;
-    /* opacity: .3; */
-    background: linear-gradient(10deg, rgba(0, 0, 0, 0.5) , rgb(0, 0, 0, 0.7)), url("../img/bedroom/contact big img10.jpg");
-
-    background-size: cover;
-    background-position: right;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    background-attachment: fixed;
+    box-sizing: border-box;
 }
 
 
@@ -1758,7 +1750,6 @@
     width: 65%;
     height: 100%;
     object-fit: cover;
-    background-image: url("../img/bedroom/ContactBigImg.jpeg");
     background-image: url("../img/bedroom/contact\ big\ img10.jpg");
     background-size: cover;
     background-position: right;
@@ -1773,18 +1764,16 @@
 
 
 .contact-inner-cont{
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
     height: 100%;
     width: 80%;
-    /* height: 700px; */
-    /* position: absolute;
-    right: 200px; */
-    /* top: 0;  */
     z-index: 10;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
+    box-sizing: border-box;
+
 }
 
 
@@ -1796,11 +1785,12 @@
     height: 700px;
     padding: 50px;
     box-sizing: border-box;
+    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
 }
 
 
 .contact-heading{
-    background-color: pink;
+    /* background-color: pink; */
     /* padding: 0 50px; */
     width: 100%;
     /* height: 100px; */
@@ -1845,12 +1835,92 @@
     font-family: 'Margesh', sans-serif;
     font-size: 60px;
     color: rgb(0, 0, 0);
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+}
+
+
+.contact-form{
+    /* background-color: lightgreen; */
+    width: 100%;
+    /* height: 70%; */
+    padding: 30px 0;
+}
+.contact-form input{
+    width: 45%;
+    height: 60px;
+    outline: none;
+    border: none;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 10px 30px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    background-color: rgb(240, 240, 240);
+    text-transform: capitalize;    
+}
+.contact-form input::placeholder{
+    font-size: 15px;
+    color: rgb(171, 171, 171);
+}
+.contact-form input:focus{
+    outline: 2px solid black;
+}
+.contact-form textarea{
+    width: calc(100% - 40px);
+    height: 130px;
+    outline: none;
+    border: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    padding: 10px 30px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+    text-transform: capitalize;
+    background-color: rgb(240, 240, 240);
+}
+.contact-form textarea::placeholder{
+    font-size: 15px;
+    color: rgb(171, 171, 171);
+}
+.contact-form textarea:focus{
+    outline: 2px solid black;
 }
 
 
 
+.contact-form-btn{
+    height: 60px;
+    width: calc(100% - 40px);
+    margin-top: 10px;
+    background-color: black;
+    border: none;
+    color: white;
+    font-size: 17px;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
+    position: relative;
 
+}
+.contact-form-btn span {
+    position: relative;
+    z-index: 2;
+}
+.contact-form-btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(174, 125, 84);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.4s ease;
+}
+.contact-form-btn:hover::before {
+    transform: scaleX(1);
+}
 
 
 
@@ -1861,11 +1931,128 @@
 .contact-side-box{
     position: relative;
     background-color: rgba(0, 0, 0, 0.729);
-    width: 500px;
-    height: 330px;
-
+    width: 35%;
+    height: 280px;
+    /* padding: 80px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.contact-side-box::before{
+    content: "";
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    opacity: .1;
+    width: 90px;
+    height: 90px;
+    background-image: url("../img/call2.png");
+    z-index: 100;
 
 }
+.contact-side-box::after{
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 20px;
+    opacity: .4;
+    width: 90%;
+    height: 90%;
+    border: 1px solid rgb(174, 125, 84);
+    z-index: 100;
+
+}
+
+
+.c-s-b-img{
+    /* background-color: rgba(173, 216, 230, 0.64); */
+    width: 70%;
+    position: relative;
+}
+
+
+.c-s-b-text{
+    /* background-color: rgba(230, 221, 173, 0.64); */
+    /* gap: 40px; */
+    height: 100px;
+    width: 70%;
+
+}
+.c-s-b-text p{
+    color: white;
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: capitalize;
+    margin-top: 20PX;
+}
+.c-s-b-text h1{
+    color: white;
+    font-size: 30px;
+    font-family: 'Margesh', sans-serif;
+    text-transform: capitalize;
+    margin-top: 20PX;
+}
+
+
+
+
+
+
+
+
+
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+
+
+
+.footer{
+    background-color: black;
+    width: 100%;
+    height: 600px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
