--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1229,10 +1229,10 @@
     position: relative;
     /* background-color: rgb(149, 49, 66); */
 }
-.design-img3{
+.design-img4{
     position: absolute;
     bottom: 0;
-    right: 0;
+    left: 0;
 }
 
 
@@ -1998,6 +1998,204 @@
 
 
 
+/* NEWS & BLOG */
+/* NEWS & BLOG */
+/* NEWS & BLOG */
+/* NEWS & BLOG */
+/* NEWS & BLOG */
+/* NEWS & BLOG */
+
+.news-blog{
+    /* background-color: rgb(239, 192, 255); */
+    width: 100%;
+    height: 100vh;
+
+    margin-top: 150px;
+    /* margin-bottom: 50px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    box-sizing: border-box;
+
+}
+
+
+
+
+.blog-heading{
+    /* background-color: rgb(226, 52, 81); */
+    /* padding: 0 50px; */
+    width: 100%;
+    /* height: 100px; */
+    text-align: center;
+    position: relative;
+    padding: 20px 0px;
+}
+
+
+.blog-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    margin-left: 60px;
+    position: relative;
+}
+.blog-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 39%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.blog-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 58%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
+
+.blog-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    /* margin-bottom: 20px; */
+}
+
+
+
+/* BLOG CARDS */
+/* BLOG CARDS */
+/* BLOG CARDS */
+/* BLOG CARDS */
+/* BLOG CARDS */
+/* BLOG CARDS */
+
+
+
+
+
+.blog-cont{
+    /* background-color: lightcoral; */
+    width: 80%;
+    /* height: 100%; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 50px 0;
+    gap: 20px;
+
+}
+
+.blog-card{
+    /* background-color: lightgreen; */
+    width: 30%;
+    height: 380px;
+    /* padding: 10px; */
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.blog-card2{
+    width: 30%;
+    height: 480px;
+}
+
+.blog-img{
+    /* background-color: rgb(235, 238, 144); */
+    width: 100%;
+    height: 75%;
+    overflow: hidden;
+
+}
+.blog-img img{
+    width: 100%;
+    height: 100%;
+    transition: .3s linear;
+
+    position: relative;
+}
+.blog-card:hover .blog-img img{
+    transform: scale(1.1);
+}
+
+
+.blog-descp{
+    /* background-color: lightseagreen; */
+    width: 100%;
+    height: 25%;
+
+    display: flex;
+    align-items: self-start;
+    justify-content: center;
+    flex-direction: column;
+    transition: .3s linear;
+
+    gap: 20px;
+    margin: 20px 0;
+}
+.blog-descp h2{
+    font-family: 'sageffine', sans-serif;
+    font-size: 25px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: .3s linear;
+}
+.blog-descp h2:hover{
+    color: rgb(174, 125, 84);
+}
+
+.blog-descp p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: rgb(174, 125, 84);
+    position: relative;
+    left: 50px;
+}
+.blog-descp p span{
+    position: relative;
+    margin-left: 20px;
+}
+.blog-descp p::before{
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: -50px;
+    background-color: rgb(174, 125, 84);
+    height: 2px;
+    width: 40px;
+    z-index: 10;
+}
+.blog-descp p span::before{
+    content: "";
+    z-index: 10;
+    position: absolute; 
+    bottom: 5px;
+    left: -15px;
+    border-radius: 50%;
+    width: 4px;
+    height: 4px;
+    background-color: rgb(174, 125, 84);
+}
+
+
 
 
 
@@ -2019,7 +2217,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
 
 }
 .footer-left-side{
@@ -2033,13 +2231,26 @@
 
 }
 .footer-right-side{
-    background-color: rgb(230, 187, 173);
+    /* background-color: rgb(230, 187, 173); */
     height: 450px;
     width: 60%;
+    box-sizing: border-box;
+
+    display: flex;
+    gap: 30px;
 
 }
 
 
+
+
+.footer-first-section{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 .footer-logo{
@@ -2158,6 +2369,76 @@
 }
 
 
+.footer-right-side{
+    display: flex;
+    gap: 70px;
+    box-sizing: border-box;
+}
+
+.footer-right-side div{
+    /* background-color: lightgreen; */
+    width: 150px;
+    margin-top: 20px;
+    box-sizing: border-box;
+    padding: 0 5px;
+}
+.footer-right-side div h1{
+    color: white;
+    font-family: 'Margesh', sans-serif;
+}
+.footer-right-side div ul{
+    list-style: none;
+    margin-top: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.footer-right-side div ul li{
+    padding: 10px 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: rgb(69, 69, 69);
+    /* background-color: rgb(201, 74, 74); */
+    cursor: pointer;
+
+    position: relative;
+    transition:  0.4s ease;
+}
+.footer-right-side div ul li:not(.footer-links-section-three div ul li)::before{
+    content: "";
+    position: absolute;
+    bottom: 8px;
+    background-color: rgb(174, 125, 84);
+    height: 1px;
+    width: 0;
+    transition:  0.4s ease;
+}
+.footer-right-side div ul li:not(.footer-links-section-three div ul li):hover{
+    color: white;
+}
+.footer-right-side div ul li:not(.footer-links-section-three div ul li):hover::before{
+    width: 100%;
+}
+
+
+
+.footer-links-section-three{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-left: 50px;
+}
+
+.footer-links-section-three div{
+    margin: 0;
+
+} 
+.footer-links-section-three div ul li{
+    cursor: text;
+    padding: 5px 0;
+}
 
 
 
@@ -2165,16 +2446,26 @@
 
 
 
+.footer-sec-section{
+    /* background-color: pink; */
+    height: 60px;
+    width: 100%;
+    border-top: 1px solid rgb(69, 69, 69);
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-sec-section p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(69, 69, 69);
+    font-size: 17px;
+}
+.footer-sec-section p span{
+    color: rgb(174, 125, 84);
+    letter-spacing: 5px;
 
-
-
-
-
-
-
-
-
+}
 
 
 
