--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -4,7 +4,12 @@
     box-sizing: border-box;
 
     /* outline: 2px solid red; */
+    ::selection{
+        color: white;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
 }
+
 
 @font-face {
     font-family: 'sageffine';
@@ -1229,6 +1234,11 @@
     position: relative;
     /* background-color: rgb(149, 49, 66); */
 }
+.design-img3{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 .design-img4{
     position: absolute;
     bottom: 0;
@@ -1380,6 +1390,9 @@
     margin-top: 10px;
     height: 2px;
     width: 40%;
+    
+    position: absolute;
+    right: 100px;
     /* background-color: red; */
     border-bottom: 2px dashed rgb(0, 0, 0);
 }
@@ -2008,10 +2021,10 @@
 .news-blog{
     /* background-color: rgb(239, 192, 255); */
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 
     margin-top: 150px;
-    /* margin-bottom: 50px; */
+    margin-bottom: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2209,8 +2222,14 @@
 
 
 
+
+
+
 .footer{
-    background-color: black;
+    /* background-color: black; */
+    background-image: url("../img/footer.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 600px;
 
