--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
     ::selection{
         color: white;
         background-color: rgba(0, 0, 0, 0.8);
@@ -187,7 +187,7 @@
 .text-container h1{
     font-family: 'Chard', sans-serif;
     color: rgb(255, 255, 255);
-    font-size: 70px;
+    font-size: 5vw;
 }
 
 
@@ -199,7 +199,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
-    height: 130px;
+    /* height: 130px; */
     background-color: rgb(255, 255, 255);
     /* border-radius: 30px; */
     display: flex;
@@ -367,6 +367,10 @@
     /* background-color: pink; */
     width: 100%;
     /* height: 100px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     position: relative;
     padding: 20px 0;
@@ -383,43 +387,44 @@
     color: rgb(174, 125, 84);
     margin-bottom: 20px;
     position: relative;
+    display: inline-block;
 }
 .s-section-heading h1::before{
     content: '';
     position: absolute;
     top: 30%;
-    left: 38%;
+    left: -20%;
     background: url('../img/design.png') no-repeat;
     width: 80px;
     height: 20px;
-
+    /* margin-bottom: 10px; */
 }
 .s-section-heading h1::after{
     content: '';
     position: absolute;
     top: 30%;
-    left: 59%;
+    left: 102%;
     background: url('../img/design.png') no-repeat;
     width: 80px;
     height: 20px;
 }
-
 
 
 
 .s-section-heading p{
     font-family: 'Margesh', sans-serif;
     font-size: 60px;
+    display: inline-block;
     color: rgb(0, 0, 0);
     margin-bottom: 20px;
+    position: relative;
 }
 .circle-svg{
     width: 250px;
-    height: 130px;
+    height: 130px;    
     position: absolute;
-    top: 20%;
-    right: 400px;
-    transform: rotate(-10deg);
+    top: 80px;
+    transform: rotate(-10deg) translateX(250px);
     /* background-color: #007bff; */
 }
 .circle-svg path{
@@ -441,8 +446,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* justify-content: center; */
     flex-wrap: wrap;
-    gap: 30px;
+    /* gap: 20px; */
     margin: 50px 0;
 
 }
@@ -552,6 +558,12 @@
 
 
 
+.about-title {
+    display: flex;
+    flex-direction: column;
+}
+
+
 .about-title span{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 17px;
@@ -562,6 +574,7 @@
     margin-left: 50px;
     margin-bottom: 20px;
     position: relative;
+    /* display: inline-block; */
     left: 20px;
 }
 .about-title span::before{
@@ -1122,7 +1135,7 @@
     position: absolute;
     top: 40px;
     left: 90px;
-    width: 100%;
+    width: 50%;
     height: 30px;
     margin-top: 10px;
 }
