--- a/assets/file/phone.css
+++ b/assets/file/phone.css
@@ -88,6 +88,11 @@
 
 
 @media (max-width: 900px){
+    .nav-main-box{
+        display: none;
+    }
+
+
     .booking-bar-container{
         /* flex-direction: column; */
         flex-wrap: wrap;
@@ -106,14 +111,48 @@
 
 
 
-
+    .cards-cont{
+        gap: 20px;
+        box-sizing: border-box;
+    }
     .card{
         width: 300px;
         height: 300px;
-        margin: 5px;
+        /* margin: 5px; */
+        box-sizing: border-box;
         /* flex: 40%; */
         /* width: 32%; */
     }
+
+
+
+
+
+
+    .about-section-container{
+        align-items: start;
+    }
+    .about-content{
+        width: 80%;
+    }
+
+    .about-img::before{
+        display: none;
+    }
+
+    .img1, .img2{
+        width: 320px;
+        height: 270px;
+    }
+    .img1{
+        height: 300px;
+        top: 50px;
+        left: 170px;
+    }
+    .img2{
+        left: 50px;
+    }
+
 }
 
 
@@ -123,7 +162,18 @@
 
 
 
+@media (max-width: 580px){
+    .booking-bar{
+        width: 90%;
+    }
+    .booking-bar-container{
+        justify-content: center;
+    }
 
+
+
+
+}
 
 
 
