--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
     ::selection{
         color: white;
         background-color: rgba(0, 0, 0, 0.8);
@@ -127,17 +127,17 @@
 .f-section{
     /* background-color: #735d5d; */
     width: 100%;
-    height: 100vh;
-    position: relative;
-    top: 0;
+    /* height: 100vh; */
+    /* position: relative;
+    top: 0; */
     margin-bottom: 120px;
 
 
 }
 .img-container{
     width: 100%;
-    height: 100%;
-    position: absolute;
+    height: 100vh;
+    position: relative;
     top: 0;
     left: 0;
 }
@@ -194,8 +194,8 @@
 
 
 .booking-bar{
-    position: absolute;
-    top: 90%;
+    position: relative;
+    bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
@@ -420,11 +420,11 @@
     position: relative;
 }
 .circle-svg{
-    width: 250px;
-    height: 130px;    
+    width: 210px;
+    height: 110px;    
     position: absolute;
     top: 80px;
-    transform: rotate(-10deg) translateX(250px);
+    transform: rotate(-10deg) translateX(210px);
     /* background-color: #007bff; */
 }
 .circle-svg path{
@@ -505,7 +505,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: rgb(201, 143, 96);
+    background-color: rgb(174, 125, 84);
     width: 100%;
     height: 100%;
     transform: scaleY(0);
